--- a/state.css
+++ b/state.css
@@ -1,3 +1,10 @@
 a:hover {
   color: red;
 }
+
+img:hover {
+  -moz-box-shadow: 0 0 10px #ccc;
+  -webkit-box-shadow: 0 0 10px #ccc;
+  box-shadow: 0 0 10px #ccc;
+
+}
